update AutoAnchor.java - Massively improved damage calculations - reworked radius calculations